<resources>
    <string name="app_name">Re.world</string>
    <string name="title_activity_launcher_aty">LauncherAty</string>
    <string name="next_step">下一步</string>
    <string name="input_task_title">输入任务标题</string>
    <string name="input_task_desciption">输入任务描述</string>
    <string name="reword_number">您的悬赏？（元）</string>
    <string name="deposit_number">需要多少保证金？(元)</string>
    <string name="need_confirmed">是否需要您的确认？</string>
    <string name="task_wait_time">任务等待时间（小时）</string>
    <string name="task_end_time">任务截止时间（小时）</string>
    <string name="attach_pic">我要附图</string>
    <string name="publish_task">发布任务</string>
    <string name="phone">手机</string>
    <string name="email">邮箱</string>
    <string name="username">昵称</string>
    <string name="sex">性别</string>
    <string name="get_money">获得赏金</string>
    <string name="lose_money">赔偿金额</string>
    <string name="complete_task_list">完成的任务</string>
    <string name="fail_task_list">失败的任务</string>
    <string name="send_feedback">发送反馈</string>
    <string name="input_feedback">可以在这里编辑反馈</string>
    <string name="task_info">任务信息</string>
    <string name="feedback_bar">反馈</string>
    <string name="view_task_list">任务列表</string>
    <string name="recommend">推荐</string>
    <string name="highReword">高悬赏</string>
    <string name="all">全部</string>
    <string name="settings">设置</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login_aty">LoginAty</string>
    <string name="title_activity_register_aty">RegisterAty</string>
    <string name="title_activity_main_aty">MainAty</string>
    <string name="title_activity_publish_task_aty">PublishTaskAty</string>
    <string name="title_activity_publish_task_scd_aty">PublishTaskScdAty</string>
    <string name="title_activity_view_self_info_aty">ViewSelfInfoAty</string>
    <string name="title_activity_view_user_info_aty">ViewUserInfoAty</string>
    <string name="title_activity_task_list_aty">TaskListAty</string>
    <string name="title_activity_task_info_aty">TaskInfoAty</string>
    <string name="title_activity_feed_back_aty">FeedBackAty</string>
    <string name="title_activity_view_self_user_info_aty">ViewSelfUserInfoAty</string>
    <string name="title_activity_editable_task_info_aty">EditableTaskInfoAty</string>
    <string name="title_activity_edit_task_aty">EditTaskAty</string>

    <string-array name="citys">
        <item>北京</item>
        <item>上海</item>
        <item>四川</item>
        <item>浙江</item>
        <item>武汉</item>
        <item>天津</item>
        <item>山西</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_view_self_task_list_aty">ViewSelfTaskListAty</string>

</resources>
