<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.reuworld.reworld.activities.PublishTaskFstAty">


    <LinearLayout
        android:background="@color/app_color"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <!--bar-->
        <TextView
            android:gravity="center"
            android:text="@string/publish_task"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <EditText
        android:id="@+id/taskTitleEdit"
        android:hint="@string/input_task_title"
        android:background="@null"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <EditText
        android:id="@+id/taskDescriptionEdit"
        android:gravity="top"
        android:hint="@string/input_task_desciption"
        android:background="@null"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="8"/>
    <Button
        android:background="@color/app_color"
        android:id="@+id/nextStepBtn"
        android:text="@string/next_step"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    </LinearLayout>
