<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:http="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.reuworld.reworld.activities.PublishTaskScdAty">
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <!--bar-->
        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2">
        <TextView
            android:text="@string/reword_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>
        <EditText
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="2"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2">
        <TextView
            android:text="@string/deposit_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>
    </LinearLayout>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2">
        <TextView
            android:text="@string/task_wait_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2">
        <TextView
            android:text="@string/task_end_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>
    </LinearLayout>
    <Switch
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/need_confirmed"
        android:id="@+id/switch1"
        android:layout_weight="1" />
    <Button
        android:text="@string/attach_pic"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"/>
    <LinearLayout
        android:layout_weight="2"
        android:layout_width="fill_parent"
        android:layout_height="0dp">

    </LinearLayout>
    <Button
        android:text="@string/publish_task"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

</LinearLayout>

