<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.reuworld.reworld.activities.MainAty"
    android:orientation="vertical"
    >

   <LinearLayout
       android:background="@color/app_color"
       android:layout_weight="1"
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:orientation="horizontal"
       >
       <EditText
           android:layout_weight="6"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:background="@null"
           />
        <Button
            android:layout_weight="1"
            android:id="@+id/publishTaskBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/add"
            />
   </LinearLayout>
    <FrameLayout
        android:id="@+id/contentFl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

    </FrameLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:layout_marginRight="5dp"
            android:background="@color/app_color_w"
            android:id="@+id/recommendBtn"
            android:text="@string/recommend"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:layout_marginRight="5dp"
            android:background="@color/app_color_w"
            android:id="@+id/highRewordBtn"
            android:text="@string/highReword"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:layout_marginRight="5dp"
            android:background="@color/app_color_w"
            android:id="@+id/allBtn"
            android:text="@string/all"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:background="@color/app_color_w"
            android:id="@+id/settingsBtn"
            android:text="@string/settings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
