<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.reuworld.reworld.activities.EditSelfInfoAty">

    <LinearLayout
        android:background="@color/app_color"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <!--bar-->
        <TextView
            android:layout_weight="3"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <!--完成按钮-->
        <Button
            android:background="@color/app_color"
            android:text="完成"
            android:id="@+id/compBtn"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:layout_weight="2"
        android:layout_width="fill_parent"
        android:layout_height="0dp">
        <ImageView
            android:id="@+id/headPortrait"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="2.5"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <TextView
                    android:text="@string/username"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
                <EditText
                    android:id="@+id/usernameEdit"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <TextView
                    android:text="@string/sex"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
                <RadioGroup
                    android:id="@+id/sexRadioGroup"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="男"
                        android:layout_weight="1"
                        />
                    <RadioButton
                        android:id="@+id/female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="女"
                        android:layout_weight="1"
                        />
                </RadioGroup>
            </LinearLayout>



        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <EditText
            android:id="@+id/selfIntroEdit"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp">

    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:text="@string/email"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <EditText
            android:id="@+id/emailEdit"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:text="@string/phone"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <EditText
            android:id="@+id/phoneEdit"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:layout_weight="4"
        android:layout_width="match_parent"
        android:layout_height="0dp">


    </LinearLayout>

</LinearLayout>